@@ -13,6 +13,7 @@ Version 1.0.1
 - Fixed resurfacing on underwater death.
 - Fixed ripples not appearing on water connections higher than room bottom.
 - Fixed crashes when loading image files are missing.
+- Clear locusts and other swarm enemies on level reload.
 - Prevent title music audio from starting in a random place.
 - Update harpoon speed on room change.
 - Timer.Create now lets you choose the units to display remaining time.
